fix: scrollbar 전역 적용되는 오류 수정

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,21 +74,20 @@ button {
 	-webkit-box-orient: vertical;
 }
 
-*::-webkit-scrollbar {
+.customScrollbar::-webkit-scrollbar {
 	width: 1.375rem;
 	/* height: 3.0625rem; */
 }
 
 /* scrollbar wrap */
-*::-webkit-scrollbar-track {
+.customScrollbar::-webkit-scrollbar-track {
 	background: white;
 }
 
-*::-webkit-scrollbar-thumb {
+.customScrollbar::-webkit-scrollbar-thumb {
 	background-color: var(--secondary);
 	border-radius: 14px;
 	border:7px solid white;
-
 }
 
 /* ::-webkit-scrollbar-thumb:hover {
